--- a/src/About.css
+++ b/src/About.css
@@ -141,3 +141,6 @@ h1
     height: 100px;
 }   
 li{float:left;list-style: none;margin-top: 7.5px;padding: 0px}
+
+a{margin:5px; font-size: 17px;color: black;}
+a :hover{color:red;text-decoration-line: underline;}
