--- a/src/Main.css
+++ b/src/Main.css
@@ -63,6 +63,9 @@
     margin-top: 0px;
     text-align: center;
     font-size: x-large;
+    display: flex;
+    justify-content: center;
+
 }
 .iconcenter
 {
